# arrow-rs-object-store

./: CHANGELOG-old.md  CHANGELOG.md  Cargo.toml  NOTICE.txt  README.md
.github/workflows/: ci.yml  dev.yml  rust.yml  typos.yml
dev/release/: update_change_log.sh
examples/: test_direct_access.rs
src/: buffered.rs  chunked.rs  delimited.rs  integration.rs  lib.rs  limit.rs  local.rs  memory.rs  multipart.rs  parse.rs  prefix.rs  registry.rs  signer.rs  tags.rs  throttle.rs  upload.rs  util.rs
src/aws/: builder.rs  checksum.rs  client.rs  credential.rs  mod.rs  precondition.rs  resolve.rs
src/azure/: builder.rs  client.rs  credential.rs  mod.rs
src/client/: builder.rs  crypto.rs  get.rs  header.rs  list.rs  mock_server.rs  mod.rs  retry.rs  s3.rs  token.rs
src/client/http/: body.rs  connection.rs  spawn.rs
src/gcp/: builder.rs  client.rs  credential.rs  mod.rs
src/hdlfs/: builder.rs  client.rs  credential.rs  direct_access.rs  filestatus.rs  list.rs  mod.rs
src/http/: client.rs  mod.rs
src/path/: mod.rs  parts.rs
tests/: get_range_file.rs  http.rs
